# BrokerClientServerApp

./: .gitignore  CMakeLists.txt  README.md
include/: Common.hpp
src/: Common.hpp
src/Client/: CMakeLists.txt  currencyvault.cpp  currencyvault.h  login.cpp  login.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcpclient.cpp  tcpclient.h
src/Server/: CMakeLists.txt  Server.cpp  core.cpp  core.h
src/Server/brocker/: bid.cpp  bid.h  currency.cpp  currency.h
src/Server/server/: server.cpp  server.h  session.cpp  session.h
test/Client/: CMakeLists.txt
test/Server/: CMakeLists.txt  TestGTest.cpp  main.cpp
